--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="overlay"></div>
     <div class="navbar">
-        <img class="font" src="assets/Netflix_logo.svg" alt="">
+        <img class="font" src="Netflix_logo.svg" alt="">
         <button class="btn">Sign In</button>
     </div>
 
